Fix: corrected so nav links fade in on IE 11.

--- a/css/style.scss
+++ b/css/style.scss
@@ -85,7 +85,7 @@ img {
 		height: 100%;
 		margin-left: auto;
 		margin-right: auto;
-		padding: 2% 3% 0 3%;
+		padding: 1% 3% 0 3%;
 		box-sizing: border-box;
 		color: #ffffff;
 
@@ -489,7 +489,7 @@ img {
 
 	.top-container {
 		position: relative;
-		min-height: 300px;
+		min-height: 315px;
 	}
 
 	.intro {
@@ -761,6 +761,11 @@ img {
 
 @media screen and (min-width: 501px) and (orientation: portrait) {
 
+	.top-container {
+		position: relative;
+		min-height: 400px;
+	}
+
 	.intro .profile-pic {
 		width: 195px;
 		height: 195px;
@@ -864,7 +869,7 @@ img {
 	}
 
 	.intro {
-		margin-top: 5vh;
+		margin-top: 2vh;
 		.title {
 			font-size: 1.5em;
 		}
